--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "assignment",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.1",
-    "eslint": "^8.7.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.10",
-    "vite": "^2.7.2"
-  },
-  "dependencies": {
-    "navigo": "^8.11.1",
-    "swiper": "^7.4.1"
-  }
+   "name": "assignment",
+   "version": "0.0.0",
+   "scripts": {
+      "start:server": "json-server --watch db.json --port 3001",
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview"
+   },
+   "devDependencies": {
+      "autoprefixer": "^10.4.1",
+      "eslint": "^8.7.0",
+      "eslint-config-airbnb-base": "^15.0.0",
+      "eslint-plugin-import": "^2.25.4",
+      "postcss": "^8.4.5",
+      "tailwindcss": "^3.0.10",
+      "vite": "^2.7.2"
+   },
+   "dependencies": {
+      "json-server": "^0.17.0",
+      "navigo": "^8.11.1",
+      "swiper": "^7.4.1"
+   }
 }
