--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "vite": "^2.7.2"
    },
    "dependencies": {
+      "axios": "^0.25.0",
       "json-server": "^0.17.0",
       "navigo": "^8.11.1",
       "swiper": "^7.4.1"
