--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "assignment",
    "version": "0.0.0",
    "scripts": {
-      "start:server": "json-server --watch db.json --port 3001",
+      "start:server": "json-server-auth --watch db.json --port 3001",
       "dev": "vite",
       "build": "vite build",
       "preview": "vite preview"
@@ -12,6 +12,7 @@
       "eslint": "^8.7.0",
       "eslint-config-airbnb-base": "^15.0.0",
       "eslint-plugin-import": "^2.25.4",
+      "json-server-auth": "^2.1.0",
       "postcss": "^8.4.5",
       "tailwindcss": "^3.0.10",
       "vite": "^2.7.2"
@@ -19,7 +20,6 @@
    "dependencies": {
       "alpinejs": "^3.8.1",
       "axios": "^0.25.0",
-      "json-server": "^0.17.0",
       "navigo": "^8.11.1",
       "swiper": "^7.4.1"
    }
