--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "eslint": "^8.7.0",
       "eslint-config-airbnb-base": "^15.0.0",
       "eslint-plugin-import": "^2.25.4",
+      "json-server": "^0.17.0",
       "json-server-auth": "^2.1.0",
       "postcss": "^8.4.5",
       "tailwindcss": "^3.0.10",
@@ -19,8 +20,10 @@
    },
    "dependencies": {
       "alpinejs": "^3.8.1",
+      "awesome-notifications": "^3.1.2",
       "axios": "^0.25.0",
       "navigo": "^8.11.1",
-      "swiper": "^7.4.1"
+      "swiper": "^7.4.1",
+      "toastr": "^2.1.4"
    }
 }
