--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "vite": "^2.7.2"
    },
    "dependencies": {
+      "@editorjs/editorjs": "^2.23.2",
       "alpinejs": "^3.8.1",
       "awesome-notifications": "^3.1.2",
       "axios": "^0.25.0",
