--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "preview": "vite preview"
    },
    "devDependencies": {
+      "@editorjs/image": "^2.6.2",
       "autoprefixer": "^10.4.1",
       "eslint": "^8.7.0",
       "eslint-config-airbnb-base": "^15.0.0",
