--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
    },
    "devDependencies": {
       "@editorjs/image": "^2.6.2",
+      "@editorjs/marker": "^1.2.2",
       "autoprefixer": "^10.4.1",
       "eslint": "^8.7.0",
       "eslint-config-airbnb-base": "^15.0.0",
@@ -21,6 +22,8 @@
    },
    "dependencies": {
       "@editorjs/editorjs": "^2.23.2",
+      "@editorjs/header": "^2.6.2",
+      "@editorjs/list": "^1.6.2",
       "alpinejs": "^3.8.1",
       "awesome-notifications": "^3.1.2",
       "axios": "^0.25.0",
