Feat sign in with google

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "alpinejs": "^3.8.1",
       "awesome-notifications": "^3.1.2",
       "axios": "^0.25.0",
+      "firebase": "^9.6.7",
       "navigo": "^8.11.1",
       "swiper": "^7.4.1",
       "toastr": "^2.1.4"
